--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,7 +37,7 @@
 
       <button [disabled]="
           !(length && (includeLetters || includeSymbols || includeNumbers))
-        " (click)="onButtonClick()" class="button is-link is-fullwidth">
+        " (click)="onButtonClick()" class="button is-primary is-fullwidth">
         Generate!
       </button>
 
